# ai_use_labs

./: CLAUDE.md  nts.ipynb
AI_Manuel/: MinPerd_Base_perdidas.gms  creacarpetas_v1.py  datos.ipynb  datos_entrada_v1.py  datos_salida_v1.py  datosrandom_v1.py  llamagams.py  llamagams_v1.py  pdf_to_markdown.py
AI_Manuel/NTS/: 4215-2016.md  CLAUDE.md  KUNDUR_OCR.md  NormaTecnicaSupervision631_v2_publicada.md  README.md  pdf_to_markdown.py
AI_Manuel/NTS/NTS_emo/: README.md  pyproject.toml
AI_Manuel/NTS/NTS_emo/docs/: index.md
AI_Manuel/NTS/NTS_emo/notebooks/: nts_5_10_2_1.ipynb
AI_Manuel/NTS/NTS_emo/src/nts_emo/: __init__.py  analysis.py  assembly.py  build_model.py  network.py  plots.py
AI_Manuel/NTS/NTS_emo/src/nts_emo/models/: __init__.py  avr_st1.py  avr_st4b.py  genrou.py  ieeeg1.py  iz_load.py  pss2a.py
AI_Manuel/NTS/NTS_emo/tests/: test_analysis.py  test_assembly.py  test_build_model.py  test_genrou.py  test_network.py
AI_Manuel/NTS/NTS_emo_Juan/: README.md  nts_base_xy_0.json  pyproject.toml
AI_Manuel/NTS/NTS_emo_Juan/cases/base/: xy_0.json
AI_Manuel/NTS/NTS_emo_Juan/docs/: index.md
AI_Manuel/NTS/NTS_emo_Juan/src/nts_emo_juan/: __init__.py  analysis.py  build_model.py  plots.py
AI_Manuel/NTS/NTS_emo_Juan/tests/: test_analysis.py  test_build.py  test_ini.py
AI_Manuel/VSG/: JMPSCE_2025_Matas-Díaz_A_Systematic_Small-signal_OA.md  pi_cc_dae.py  pi_vsg_cc_dae.py  pi_vsg_vc_dae.py
AI_Manuel/data_set/day_1/: LINE_DATA.csv  MinPerd_Base_perdidas.gms  MinPerd_Base_perdidas.lst  MinPerd_Base_perdidas.lxi  MinPerd_Base_perdidas.~gm  MinPerd_PF_MV.lst  (+935 more)
(+525983 files in other folders)
