[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NTS_emo"
version = "0.1.0"
description = "Small-signal eigenvalue analysis — NTS 631 §5.10.2.1 two-machine benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "casadi>=3.6",
    "cffi>=1.15",
    "pydae>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/nts_emo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
