[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nts-emo-juan"
version = "0.1.0"
description = "Small-signal eigenvalue analysis — NTS 631 §5.10.2.1 two-machine benchmark (pydae-BPS / CasADi backend)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "pydae>=1.4",
    "pydae-bps>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/nts_emo_juan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: requires model build (deselect with -m 'not slow')"]
